# workbooks

./: .gitignore  README.md  mise.toml  pyproject.toml
.github/workflows/: build.yml
badges/: MANIFEST.md
badges/american-business/: 2023.md
badges/american-cultures/: 2006.md
badges/american-heritage/: 2020.md
badges/american-indian-culture/: 2024.md
badges/american-labor/: 2024.md
badges/animal-science/: 2025.md
badges/animation/: 2022.md
badges/archaeology/: 2026.md
badges/archery/: 2025.md
badges/architecture/: 2024.md
badges/art/: 2024.md
badges/artificial-intelligence/: 2025.md
badges/astronomy/: 2025.md
badges/athletics/: 2026.md
badges/automotive-maintenance/: 2026.md
badges/aviation/: 2025.md
badges/backpacking/: 2024.md
badges/basketry/: 2024.md
badges/bird-study/: 2026.md
badges/bugling/: 2024.md
badges/camping/: 2024.md
badges/canoeing/: 2026.md
badges/chemistry/: 2025.md
badges/chess/: 2026.md
badges/citizenship-in-society/: 2021.md
badges/citizenship-in-the-community/: 2026.md
badges/citizenship-in-the-nation/: 2026.md
badges/citizenship-in-the-world/: 2026.md
badges/climbing/: 2025.md
badges/coin-collecting/: 2026.md
badges/collections/: 2021.md
badges/communication/: 2019.md
badges/composite-materials/: 2026.md
badges/cooking/: 2025.md
badges/crime-prevention/: 2025.md
badges/cybersecurity/: 2025.md
badges/cycling/: 2026.md
shared/: leave-no-trace.md  outdoor-code.md  wilderness-use-policy.md
tests/: test_cli.py  test_corpus.py  test_publish.py  test_render.py
(+255 files in other folders)
